2016-08-19      Gaius Mulley <gaius@gnu.org>

	* gcc/gm2/Make-lang.in:  included mcStream.def and
          mcStream.mod to be compiled and linked to produce mc.
	* gm2/init/mcinit:  updated link and init list to include
          mcStream.
	* gm2/mc/decl.mod:  many, many bug fixes which now allow
	  self translation of 53 of the 58 modules.

2016-08-16      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  added mcStream.def and mcStream.mod
	  to the build list for mc.

2016-08-16      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  added wrapc.def pth.def COROUTINES.def
          Selective.def termios.def to be translated by mc as part
          of mc-autogen.  Added rules to translate iso libraries
	  from M2 to C using mc.
	* gm2/mc/decl.mod:  added halt node.  (doEscape) New procedure
          function.  (doStringC) add escape to the escape character if
          inside a string literal.  (addExported) corrected test prior
          to addToDo.  (includeDefVarProcedure)  include variables and
          types symbols if they are defined in definition modules.
          (doFuncUnbounded) include cast for parameter and use
          doFQNameC for the parameter name rather than call doExprC
          since doExprC will dereference a VAR paramater and we must
          pass it as declared.  (doAdrExprC)  New procedure function
          which is used to catch & (*p) and simply it to (p).  (doHalt)
	  New procedure.

2016-08-05      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  translate autogenerated modules without
	  the --extended-opaque option.
	* gm2/mc/decl.mod:  many changes which include the ability to
          visit all nodes and their dependents calling a call back
	  procedure.

2016-08-01      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  introduce rules to build new module keyc.
          New rules to attempt to build the C generated version of mc.
	* gm2/init/mcinit:  added keyc to the list of modules to be
          linked.