@@ -17,7 +17,7 @@ with gm2; see the file COPYING.  If not, write to the Free Software
 Foundation, 51 Franklin Street, Fifth Floor,
 Boston, MA 02110-1301, USA. *)
 
-DEFINITION MODULE decl ;
+DEFINITION MODULE decl ; (*!m2pim*)
 
 (*
     Title      : decl
